:bug: Grid now forced to 1 col on mobile

--- a/src/layouts/index.css
+++ b/src/layouts/index.css
@@ -786,6 +786,8 @@ pre tt:after {
 @media only screen and (max-width: 640px) {
   .col
   {
+    min-width: 100%;
+    margin:1em 0;
     max-width: 100%;
   }
 }
@@ -854,6 +856,12 @@ pre tt:after {
 {
   box-shadow: 3px 0px 22px 5px rgba(0,0,0,0.12);
   opacity: 1;
+}
+
+@media only screen and (max-width: 640px) {
+ .Card {
+   width:100%;
+ }
 }
 
 /* Black border on right side headers */
